--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ a:hover {
 
 h2 {
     margin-bottom: 30px;
+    font-size: 4em;
 }
 
 main {
@@ -55,6 +56,7 @@ main {
     line-height: 2;
     margin-bottom: 60px;
     margin-top: 60px;
+    font-weight: bold;
 }
 
 span {
