--- a/style.css
+++ b/style.css
@@ -35,6 +35,17 @@ a:hover {
     font-weight: bold;
 }
 
+.detail {
+    color: darkslategray;
+    font-size: 0.6em;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.detail:hover {
+background: whitesmoke;
+}
+
 .logo {
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
@@ -58,6 +69,7 @@ main {
     margin-bottom: 60px;
     margin-top: 60px;
     font-weight: bold;
+    font-size: 1.5em;
 }
 
 span {
