--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ a:hover {
     background: white;
     font-weight: bold;
 }
+
 /*//////////////////////////////////HOME/////////////////////////////////*/
 
 .logo {
@@ -181,6 +182,12 @@ main {
     width: 80%;
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
+}
+
+/*//////////////////////////////////GENRES/////////////////////////////////*/
+
+.titreGenre {
+    font-size: 2em;
 }
 
 /*//////////////////////////////////FOOTER/////////////////////////////////*/
