--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ a:hover {
     font-size: 0.8em;
     border-radius: 10px;
     padding: 10px;
-    margin-top: 40px;
 }
 
 .detail:hover {
@@ -179,10 +178,23 @@ main {
 }
 
 .listRO img {
-    width: 80%;
+    width: 130%;
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
 }
+
+.listRO h2 {
+    margin: 0px;
+}
+
+.detail {
+    display: flex;
+    color: darkslategray;
+    font-size: 0.8em;
+    border-radius: 10px;
+    padding: 10px;
+}
+
 
 /*//////////////////////////////////GENRES/////////////////////////////////*/
 
