--- a/style.css
+++ b/style.css
@@ -162,6 +162,15 @@ main {
     border-radius: 10px;
 }
 
+.filmo {
+    display: flex;
+    color: darkslategray;
+    font-size: 1.5em;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+
 /*//////////////////////////////////ROLES/////////////////////////////////*/
 
 .listRO {
@@ -184,7 +193,7 @@ main {
 }
 
 .listRO h2 {
-    margin: 0px;
+    margin: 5px;
 }
 
 .detail {
