--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ h2 {
     margin: 5px;
 }
 
+h3 {
+    color: gray;
+    font-size: 2.5em;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -266,7 +271,7 @@ main {
 }
 
 .formAdd {
-    color: gray;
+    color: whitesmoke;
 }
 
 /*//////////////////////////////////FOOTER/////////////////////////////////*/
