--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ h2 {
 h3 {
     color: gray;
     font-size: 2.5em;
+    /* margin-top: 30px; */
 }
 
 main {
@@ -146,6 +147,12 @@ main {
     width: 60%;
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
+}
+
+.distribution {
+    background: white;
+    font-weight: 200;
+    width: max-content;
 }
 
 /*//////////////////////////////////REALISATEURS/////////////////////////////////*/
@@ -223,6 +230,26 @@ main {
     font-size: 2em;
 }
 
+.listG {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 2;
+    margin-bottom: 70px;
+    margin-top: 70px;
+    font-weight: bold;
+    margin: 40px;
+    border-radius: 10px;
+    padding: 20px;
+
+    /*Effet de transparence*/
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), white);
+    backdrop-filter: blur(8px);
+    filter: drop-shadow(0 0 20px black);
+}
+
 /*//////////////////////////////////FORMULAIRES/////////////////////////////////*/
 
 
@@ -287,7 +314,13 @@ main {
     color: whitesmoke;
     border: 1px solid gray;
     border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 
+    /*Effet de transparence*/
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), grey);
+    backdrop-filter: blur(8px);
+    filter: drop-shadow(0 0 20px black);
 }
 
 /*//////////////////////////////////FOOTER/////////////////////////////////*/
