--- a/style.css
+++ b/style.css
@@ -123,9 +123,20 @@ main {
 }
 
 .listM img {
-    width: 30%;
+    width: 50%;
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
+}
+
+.synopsis {
+    background: white;
+    font-weight: 200;
+    border-radius: 10px;
+    width: max-content;
+    margin-bottom: 40px;
+    width: 550px;
+    height: max-content;
+    padding: 20px
 }
 
 /*//////////////////////////////////ACTEURS/////////////////////////////////*/
@@ -147,12 +158,6 @@ main {
     width: 60%;
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
-}
-
-.distribution {
-    background: white;
-    font-weight: 200;
-    width: max-content;
 }
 
 /*//////////////////////////////////REALISATEURS/////////////////////////////////*/
