--- a/style.css
+++ b/style.css
@@ -75,12 +75,6 @@ h2 {
     margin: 5px;
 }
 
-h3 {
-    color: gray;
-    font-size: 2.5em;
-    /* margin-top: 30px; */
-}
-
 main {
     display: flex;
     flex-direction: column;
@@ -276,19 +270,30 @@ main {
 .name {
     color: gray;
     border-radius: 10px;
+    width: 200px;
 }
 
-.nameGenre {
+h3 {
     color: gray;
+    font-size: 2.5em;
+    margin-bottom: 30px;
+}
+
+.nameGenre,
+.nameRealisateur {
+    color: gray;
+    width: 230px;
+    height: 50px;
     border-radius: 10px;
-    width: 200px;
+    margin-bottom: 20px;
 }
 
 .nameSynopsis {
     color: gray;
     border-radius: 10px;
-    width: 570px;
-    /* height: 200px; */
+    width: 500px;
+    margin: 30px;
+    padding: 20px;
 }
 
 .add {
