--- a/style.css
+++ b/style.css
@@ -288,6 +288,15 @@ h3 {
     margin-bottom: 20px;
 }
 
+.nameR {
+    color: gray;
+    width: 230px;
+    height: 50px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin: 20px;
+}
+
 .nameSynopsis {
     color: gray;
     border-radius: 10px;
