--- a/style.css
+++ b/style.css
@@ -318,6 +318,12 @@ h3 {
     transition: 0.5s ease-in-out;
 }
 
+form {
+    /* flex-direction: column;
+    display: flex; */
+    margin: 20px
+}
+
 .form {
     color: whitesmoke;
     font-size: 1.5em;
