--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a:hover {
 .detail:hover {
     background: whitesmoke;
     transition: 0.5s ease-in-out;
-    /* filter: drop-shadow(0 0 20px black); */
+    filter: drop-shadow(0 0 20px black);
 }
 
 h1 {
@@ -320,8 +320,6 @@ h3 {
 }
 
 form {
-    /* flex-direction: column;
-    display: flex; */
     margin: 20px
 }
 
