--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ a:hover {
     filter: drop-shadow(0 0 20px black);
 }
 
+.detailR:hover {
+    background: whitesmoke;
+    transition: 0.5s ease-in-out;
+    
+}
+
 h1 {
     margin-bottom: 50px;
     font-size: 4em;
