--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ h3 {
 .add {
     border-radius: 10px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .add:hover {
@@ -349,6 +350,23 @@ form {
     border-radius: 10px;
     margin-top: 40px;
     margin-bottom: 40px;
+
+    /*Effet de transparence*/
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), grey);
+    backdrop-filter: blur(8px);
+    filter: drop-shadow(0 0 20px black);
+}
+
+.formAddCasting,
+.formAddFilm {
+    color: whitesmoke;
+    border: 1px solid gray;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     /*Effet de transparence*/
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), grey);
