--- a/style.css
+++ b/style.css
@@ -284,6 +284,8 @@ h3 {
     color: gray;
     font-size: 2.5em;
     margin-bottom: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .nameGenre,
@@ -374,6 +376,16 @@ form {
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), grey);
     backdrop-filter: blur(8px);
     filter: drop-shadow(0 0 20px black);
+}
+
+.formAddActeur form {
+    display: flex;
+    flex-direction: column;
+}
+
+.formAddRealisateur form {
+    display: flex;
+    flex-direction: column;
 }
 
 /*//////////////////////////////////FOOTER/////////////////////////////////*/
