--- a/style.css
+++ b/style.css
@@ -387,6 +387,8 @@ form {
 .infos {
     display: flex;
     flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
 }
 
 /*//////////////////////////////////FOOTER/////////////////////////////////*/
