--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ main {
     border: 1px white solid;
     border-radius: 10px;
     padding: 20px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), white);
+    backdrop-filter: blur(8px);
 }
 
 .listM img {
@@ -155,6 +157,8 @@ main {
     border: 1px white solid;
     border-radius: 10px;
     padding: 20px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), white);
+    backdrop-filter: blur(8px);
 }
 
 .listA img {
@@ -179,6 +183,8 @@ main {
     border: 1px white solid;
     border-radius: 10px;
     padding: 20px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), white);
+    backdrop-filter: blur(8px);
 }
 
 .listR img {
@@ -212,6 +218,8 @@ main {
     border: 1px white solid;
     border-radius: 10px;
     padding: 20px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), white);
+    backdrop-filter: blur(8px);
 }
 
 .listRO img {
@@ -341,7 +349,15 @@ form {
 }
 
 .form {
-    color: whitesmoke;
+    color: darkslategray;
+    font-size: 1.5em;
+    border-radius: 10px;
+    font-weight: lighter;
+    transition: 0.5s ease-in-out;
+}
+
+.formL {
+    color: white;
     font-size: 1.5em;
     border-radius: 10px;
     font-weight: lighter;
