--- a/style.css
+++ b/style.css
@@ -300,6 +300,9 @@ main {
     display: flex;
     flex-direction: column;
     color: white;
+    border-radius: 10px;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), transparent);
+    backdrop-filter: blur(8px);
     justify-content: center;
     align-items: center;
     text-align: center;
