--- a/style.css
+++ b/style.css
@@ -143,13 +143,14 @@ main {
     margin: 40px;
     border-radius: 10px;
     padding: 30px;
+    font-size: 1.5em;
     color: whitesmoke;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), transparent);
     backdrop-filter: blur(8px);
 }
 
 .listM img {
-    width: 70%;
+    width: 60%;
     filter: drop-shadow(0 0 20px black);
     border-radius: 10px;
 }
@@ -163,7 +164,7 @@ main {
     margin-bottom: 40px;
     width: 550px;
     height: max-content;
-    padding: 20px
+    padding: 20px;
 }
 
 /*//////////////////////////////////ACTEURS/////////////////////////////////*/
