--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ a:hover {
     position: relative;
     width: 220%;
     right: 170px;
-    opacity: 50%;
+    opacity: 30%;
+    filter: grayscale(50%);
 }
 
 
@@ -241,6 +242,7 @@ main {
     margin-top: 70px;
     font-weight: bold;
     margin: 40px;
+    color: whitesmoke;
     border-radius: 10px;
     padding: 20px;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), transparent);
@@ -269,6 +271,12 @@ main {
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+.inter {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
 }
 
 /*//////////////////////////////////GENRES/////////////////////////////////*/
@@ -388,7 +396,7 @@ form {
 }
 
 .form {
-    color: darkslategray;
+    color: whitesmoke;
     font-size: 1.5em;
     border-radius: 10px;
     font-weight: lighter;
