--- a/style.css
+++ b/style.css
@@ -406,11 +406,13 @@ form {
 }
 
 .formL {
-    color: white;
+    color: black;
     font-size: 1.5em;
     border-radius: 10px;
     font-weight: lighter;
     transition: 0.5s ease-in-out;
+    background: white;
+    padding: 5px;
 }
 
 .formS {
@@ -520,8 +522,8 @@ span {
     .formAddCasting,
     .formAddFilm,
     .formAddActeur,
-    .formAddRealisateur {
-        border-radius: 0px;
+    .formAddRealisateur,
+    .formAddGenre {
         margin-top: 0px;
         margin-bottom: 0px;
     }
@@ -537,6 +539,12 @@ span {
 
     main {
         font-size: 0.8em;
+    }
+
+    .detail,
+    .detailR {
+        font-size: 1em;
+        padding: 10px;
     }
 
     h1 {
@@ -576,6 +584,17 @@ span {
         width: 100%;
     }
 
+    .listA img,
+    .listR img,
+    .listRO img {
+        width: 100%;
+    }
+
+    .inter {
+        flex-direction: column;
+        align-items: center;
+    }
+
     .titreGenre {
         padding: 10px;
         color: black;
@@ -586,7 +605,6 @@ span {
 
     .formulaire {
         margin-top: 0px;
-        border-radius: 0px;
     }
 
     a {
