--- a/style.css
+++ b/style.css
@@ -58,6 +58,14 @@ a:hover {
     filter: grayscale(50%);
 }
 
+.up {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), transparent);
+}
+
 
 /*//////////////////////////////////MAIN/////////////////////////////////*/
 
@@ -360,7 +368,6 @@ h3 {
     color: gray;
     width: 230px;
     height: 40px;
-    border-radius: 10px;
     margin: 10px;
 }
 
@@ -394,7 +401,7 @@ h3 {
 }
 
 form {
-    margin: 20px
+    margin: 20px;
 }
 
 .form {
